# kupl

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build.sh  llvm-gcov.sh  run_lcov.sh
cmake/: libkupl_check_libs.cmake  libkupl_source_files.cmake
src/: CMakeLists.txt  kupl.h  kupl_mma.h
src/core/: kupl_core.cpp  kupl_core.h
src/dm/memcpy/: kupl_memcpy.cpp  kupl_memcpy.h
src/executor/: kupl_executor.cpp  kupl_executor.h  kupl_executor_group.cpp  kupl_executor_group.h
src/executor/backend/: kupl_executor_backend.cpp  kupl_executor_backend.h
src/executor/backend/omp/: kupl_omp.cpp  kupl_omp.h
src/executor/backend/pthread/: kupl_pthread.cpp  kupl_pthread.h
src/memory/hbw/: kupl_hbw.cpp  kupl_hbw.h
src/memory/mem/: kupl_mem.cpp  kupl_mem.h
src/memory/mpool/: kupl_mpool.cpp  kupl_mpool.h
src/memory/shm/: kupl_shm.cpp  kupl_shm.h  kupl_shmc.cpp  kupl_shmc.h
src/memory/shm/allreduce/: kupl_allreduce.cpp  kupl_allreduce.h
src/memory/shm/alltoall/: kupl_alltoall.cpp  kupl_alltoall.h
src/memory/shm/bcast/: kupl_bcast.cpp  kupl_bcast.h
src/memory/shm/fence/: kupl_fence.cpp  kupl_fence.h  kupl_fence_linear.cpp  kupl_fence_peer.cpp  kupl_fence_rd.cpp
src/memory/shm/posix/: kupl_shm_posix.cpp  kupl_shm_posix.h
src/memory/shm/sls/: kupl_shm_sls.cpp  kupl_shm_sls.h  kupl_shm_sls_adapter.cpp  kupl_shm_sls_adapter.h
src/memory/shm/sls/sls_kernel/: sls_kernel.cpp  sls_kernel.h
src/memory/shm/xpmem/: kupl_shm_xpmem.cpp  kupl_shm_xpmem.h  kupl_shm_xpmem_adapter.cpp  kupl_shm_xpmem_adapter.h
src/mma/: kupl_mma.cpp
src/mt/: kupl_check.cpp  kupl_check.h  kupl_dag.cpp  kupl_dag.h  kupl_event.cpp  kupl_event.h  kupl_graph.cpp  kupl_graph.h  kupl_parallel_for.cpp  kupl_parallel_for.h  kupl_queue.cpp  kupl_queue.h  kupl_static_graph.cpp  kupl_static_graph.h  kupl_task.cpp  kupl_task.h  kupl_taskbase.h  kupl_ult.cpp  kupl_ult.h
src/mt/barrier/: kupl_barrier.cpp  kupl_barrier.h  kupl_barrier_dist.cpp
src/mt/scheduler/: kupl_sched.cpp  kupl_sched.h
src/mt/scheduler/plugin/: kupl_sched_plugin_api.h  kupl_sched_plugin_load.cpp  kupl_sched_plugin_load.h
src/mt/scheduler/plugin/hybrid/: kupl_sched_hybrid.cpp  kupl_sched_hybrid.h
src/mt/scheduler/plugin/mq/: kupl_sched_mq.cpp  kupl_sched_mq.h
src/mt/scheduler/plugin/sspe/: kupl_sched_sspe.cpp  kupl_sched_sspe.h
src/mt/scheduler/plugin/static_mq/: kupl_sched_expand_static_mq.cpp  kupl_sched_static_mq.cpp  kupl_sched_static_mq.h
src/tools/: kupl_tools.cpp  kupl_tools.h
src/tools/profile/: kupl_profile.cpp  kupl_profile.h  kupl_profile_trace.cpp  kupl_profile_trace.h
src/tools/struct/: kupl_list.h  kupl_pool.h  kupl_vector.cpp  kupl_vector.h  kupl_vla.h
src/utils/: kupl_utils.cpp  kupl_utils.h
src/utils/arch/: kupl_atomic.h  kupl_cache.h
src/utils/arch/aarch64/: cache.h
src/utils/arch/generic/: atomic.h  cache.h
src/utils/config/: kupl_config.cpp  kupl_config.h  kupl_config_var.inc
src/utils/debug/: kupl_assert.h  kupl_log.h
src/utils/lock/: kupl_lock.cpp  kupl_lock.h
src/utils/lock/pthread_spinlock/: kupl_pthread_spinlock.cpp  kupl_pthread_spinlock.h
src/utils/lock/ticket_array_lock/: kupl_ticket_array_lock.cpp  kupl_ticket_array_lock.h
src/utils/sys/: kupl_compiler.h  kupl_dl_module.cpp  kupl_dl_module.h  kupl_glibc_version.h  kupl_hardware.cpp  kupl_hardware.h  kupl_math.h
src/utils/thirdpart/sdma/: sdma_module.cpp  sdma_module.h
src/utils/time/: kupl_time.cpp  kupl_time.h
src/utils/type/: kupl_status.h
test/conf/: config.yaml
test/functest/: CMakeLists.txt
test/functest/common/: test_executor.cpp  test_executor_group.cpp  test_graph.cpp  test_hbw.cpp  test_mem.cpp  test_memory.cpp  test_queue_event.cpp  test_queue_priority.cpp  test_static_graph.cpp  test_time.cpp  test_version.cpp
test/functest/internals/common/: test_barrier.cpp  test_dag.cpp  test_executor.cpp  test_executor_backend.cpp  test_executor_group.cpp  test_graph.cpp  test_invoke_parallel.cpp  test_memory.cpp  test_queue.cpp  test_sched.cpp  test_struct_vector.cpp  test_struct_vla.cpp  test_task.cpp  test_ult.cpp  test_utils_sys.cpp  test_utils_time.cpp
test/functest/internals/omp/: test_utils_lock.cpp
test/functest/internals/pthread/: test_utils_lock.cpp
test/functest/mma/: CMakeLists.txt  test_copy.cpp  test_mma.cpp  test_mma_main.cpp  test_tensor.cpp
test/functest/omp/: CMakeLists.txt  test_omp_main.cpp  test_queue_submit.cpp  test_taskloop.cpp  test_ult_parallel_for.cpp
test/functest/pthread/: CMakeLists.txt  test_pthread_main.cpp  test_queue_submit.cpp  test_static_graph_egroup.cpp  test_taskloop.cpp  test_ult_parallel_for.cpp
test/functest/shm/: CMakeLists.txt  test_shm.cpp  test_shm_main.cpp
test/fuzz/: CMakeLists.txt
test/fuzz/common/: fuzz_common.h
test/fuzz/mma/: CMakeLists.txt  fuzz_copy.cpp  fuzz_mma.cpp  fuzz_mma_main.cpp
test/fuzz/omp/: CMakeLists.txt  fuzz_executor_group.cpp  fuzz_graph.cpp  fuzz_hbw.cpp  fuzz_mem.cpp  fuzz_memcpy.cpp  fuzz_omp_main.cpp  fuzz_parallel_for.cpp  fuzz_queue_event.cpp  fuzz_reduce.cpp  fuzz_static_graph.cpp  fuzz_task.cpp  fuzz_taskloop.cpp
test/fuzz/shm/: CMakeLists.txt  fuzz_allreduce.cpp  fuzz_alltoall.cpp  fuzz_bcast.cpp  fuzz_shm_barrier.cpp  fuzz_shm_main.cpp  fuzz_win_alloc.cpp  fuzz_win_query.cpp
